--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,12 @@ author: Sean Eagan <seaneagan1@gmail.com>
 description: Interact with pubspecs.
 homepage: https://github.com/seaneagan/den
 dependencies:
-  http: '>=0.11.1+1 <0.12.0'
-  logging: any
   path: any
+  pub_package_data: any
   pub_semver: '>=1.0.0 <2.0.0'
   unscripted: '>=0.4.3 <0.5.0'
   yaml: '>=2.0.1+1 <3.0.0'
 dev_dependencies:
   unittest: '>=0.11.0 <12.0.0'
+executables:
+  den: null
