--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ author: Sean Eagan <seaneagan1@gmail.com>
 description: Interact with pubspecs.
 homepage: https://github.com/seaneagan/den
 dependencies:
+  ansicolor: any
   path: any
   pub_package_data: any
   pub_semver: '>=1.0.0 <2.0.0'
@@ -13,4 +14,4 @@ dependencies:
 dev_dependencies:
   unittest: '>=0.11.0 <12.0.0'
 executables:
-  den:
+  den: null
