--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ description: Interact with pubspecs.
 homepage: https://github.com/seaneagan/den
 dependencies:
   ansicolor: any
-  path: any
+  path: '>=1.3.0 <2.0.0'
   pub_package_data: any
   pub_semver: '>=1.0.0 <2.0.0'
   source_span: any
