--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,11 @@ description: Interact with pubspecs.
 homepage: https://github.com/seaneagan/den
 dependencies:
   ansicolor: any
+  contrast: '>=0.1.1 <0.2.0'
   path: '>=1.3.0 <2.0.0'
   pub_package_data: any
   pub_semver: '>=1.0.0 <2.0.0'
+  quiver: '>=0.18.2'
   source_span: any
   unscripted: '>=0.4.3 <0.5.0'
   yaml: '>=2.0.1+1 <3.0.0'
