--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: den
 version: 0.1.0
 author: Sean Eagan <seaneagan1@gmail.com>
-description: Interact with pubspecs.
+description: Den is a place for doing pub-related things, like updating your pubspec, from within the comfort and convenience of your own home (if your home is the command line).
 homepage: https://github.com/seaneagan/den
 dependencies:
   ansicolor: any
