--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   quiver: '>=0.18.2'
   source_span: any
   unscripted: '>=0.5.0 <0.6.0'
+  which: '>=0.1.0 <0.2.0'
   yaml: '>=2.0.1+1 <3.0.0'
 dev_dependencies:
   unittest: '>=0.11.0 <12.0.0'
