--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   unscripted: '>=0.5.0 <0.6.0'
   which: '>=0.1.0 <0.2.0'
   yaml: '>=2.0.1+1 <3.0.0'
+  prompt: '>=0.1.3 <0.2.0'
 dev_dependencies:
   unittest: '>=0.11.0 <12.0.0'
 executables:
