--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   ansicolor: any
   contrast: '>=0.1.1 <0.2.0'
+  github: '>=2.1.6 <3.0.0'
   path: '>=1.3.0 <2.0.0'
   prompt: '>=0.1.7 <0.2.0'
   pub_package_data: any
