--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,15 @@ environment:
 dependencies:
   ansicolor: any
   contrast: '>=0.1.1 <0.2.0'
-  github: '>=2.1.6 <3.0.0'
+  den_api: '>=0.1.0 <0.2.0'
   path: '>=1.3.0 <2.0.0'
   prompt: '>=0.1.7 <0.2.0'
   pub_package_data: any
-  pub_semver: '>=1.0.0 <2.0.0'
+  pub_semver: '>=1.1.0 <2.0.0'
   quiver: '>=0.18.2'
   source_span: any
   unscripted: '>=0.5.0 <0.6.0'
-  which: '>=0.1.0 <0.2.0'
+  which: '>=0.1.3 <0.2.0'
   yaml: '>=2.0.1+1 <3.0.0'
 dev_dependencies:
   unittest: '>=0.11.0 <12.0.0'
